--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.scss
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.scss
@@ -6,8 +6,8 @@
     $align: stretch,
     $justify: flex-start
   );
-  height: 100%; // Ensure the container takes full height
-  overflow: hidden; // Prevent scrolling on the container
+  height: 100%;
+  overflow: hidden;
 }
 
 .curriculum-header-container {
