--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -49,6 +49,7 @@
   --spacing-2xl: 2.5rem;
   --spacing-3xl: 3rem;
   --spacing-4xl: 4rem;
+  --spacing-4xxl: 4.5rem;
 
   // Border Radius
   --border-radius-base: 0.25rem;
