--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -40,6 +40,8 @@
   --secondary-fade: #80631520;
   --secondary-text-two: #f0e2b6;
 
+  --button-text: #800000;
+
   /* Extra colors */
   --blue-primary: #002f85;
   --blue-fade: #0027702f;
@@ -116,6 +118,8 @@
   --secondary-hover: #cc9d1b08;
   --secondary-fade: #87691620;
   --secondary-text-two: #423200;
+
+  --button-text: #ffffff;
 
   /* Extra colors */
   --blue-primary: #a5c1f5;
