--- a/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
+++ b/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
@@ -1,3 +1,4 @@
+<!-- manage-preferences.component.html -->
 <div class="faculty-pref-container">
   @if (isLoading | async) {
   <div class="loading-wrapper">
@@ -90,14 +91,6 @@
           </td>
         </ng-container>
 
-        <!-- Faculty Units Column -->
-        <!-- <ng-container matColumnDef="facultyUnits">
-            <th mat-header-cell *matHeaderCellDef class="custom-header">Units</th>
-            <td mat-cell *matCellDef="let element" class="custom-cell">
-              {{ element.facultyUnits }}
-            </td>
-          </ng-container> -->
-
         <!-- Action Column -->
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
@@ -153,7 +146,7 @@
         <!-- Requests Column -->
         <ng-container matColumnDef="requests">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
-            <div class="helper-container">
+            <div class="help-request-container">
               <span>Requests</span>
               <span
                 mat-symbol="help"
@@ -183,7 +176,18 @@
         <ng-container matColumnDef="toggle">
           <!-- Global Toggle -->
           <th mat-header-cell *matHeaderCellDef class="custom-header">
-            <div class="helper-container">
+            <div class="help-toggle-container">
+              <!-- Check if scheduled and not enabled globally -->
+              @if (isGloballyScheduled() && !isToggleAllChecked) {
+              <button
+                class="scheduled-button global pop"
+                (click)="onToggleAllPreferences($event, true)"
+                [matTooltip]="getTooltip('global')"
+              >
+                Scheduled
+              </button>
+              } @else {
+              <!-- Existing Toggle -->
               <mat-slide-toggle
                 class="header-toggle"
                 [checked]="isToggleAllChecked"
@@ -192,14 +196,14 @@
                 (change)="onToggleAllPreferences($event)"
               >
               </mat-slide-toggle>
-
+              }
               <span
                 mat-symbol="help"
                 [fill]="false"
                 class="help-button"
                 [matTooltip]="
                   'This button allows you to toggle faculty preferences\n
-                     submission and set submission period'
+                   submission and set submission period'
                 "
               ></span>
             </div>
@@ -207,7 +211,18 @@
 
           <!-- Individual Toggle -->
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <div class="helper-container">
+            <div class="help-toggle-container">
+              <!-- Check if scheduled and not enabled individually -->
+              @if (isIndividuallyScheduled(element) && !element.is_enabled) {
+              <button
+                class="scheduled-button individual pop"
+                (click)="onToggleSinglePreferences(element, $event, true)"
+                [matTooltip]="getTooltip('individual', element)"
+              >
+                Scheduled
+              </button>
+              } @else {
+              <!-- Existing Toggle -->
               <mat-slide-toggle
                 class="single-toggle"
                 [checked]="element.is_enabled"
@@ -216,6 +231,7 @@
                 (change)="onToggleSinglePreferences(element, $event)"
               >
               </mat-slide-toggle>
+              }
             </div>
           </td>
         </ng-container>
