feat: add loading spinner to add button and enhance table header styles

--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
@@ -12,6 +12,7 @@
       [addIconName]="'apps'"
       [showExportDialog]="true"
       [customExportOptions]="customExportOptions"
+      [isLoading]="isManagingPrograms"
       (inputChange)="onInputChange($event)"
       (export)="onExport($event)"
       (add)="onManagePrograms()"
