--- a/frontend/src/app/shared/table-header/table-header.component.scss
+++ b/frontend/src/app/shared/table-header/table-header.component.scss
@@ -1,5 +1,9 @@
 @use "../../../styles/mixins";
 
+:host {
+  @include mixins.custom-spinner($color: white);
+}
+
 .header-container {
   @include mixins.flex-layout($align: stretch, $justify: space-between);
   @include mixins.default-transition;
@@ -83,6 +87,19 @@
 
   .custom-mat-button {
     color: white;
+  }
+
+  .add-button {
+    min-width: 10rem;
+  }
+
+  .button-wrapper {
+    @include mixins.flex-layout($gap: var(--spacing-xs));
+
+    mat-icon {
+      @include mixins.flex-layout;
+      font-size: var(--font-size-lg);
+    }
   }
 
   .export-button {
