style: adjust text formatting in dialog preferences component for better readability

--- a/frontend/src/app/shared/dialog-pref/dialog-pref.component.scss
+++ b/frontend/src/app/shared/dialog-pref/dialog-pref.component.scss
@@ -64,6 +64,7 @@
       .custom-cell {
         padding: var(--spacing-xs);
         text-align: center;
+        white-space: pre-line;
       }
 
       .no-data-cell {
