feat: implement custom date formatting in table dialog component and enhance datepicker functionality

--- a/frontend/src/app/shared/table-dialog/table-dialog.component.html
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.html
@@ -129,8 +129,9 @@
               ? form.get('startDate')?.value
               : null
           "
+          readonly
+          (click)="picker.open()"
         />
-        <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle
           matIconSuffix
           [for]="picker"
