--- a/frontend/src/app/core/components/admin/overview/overview.component.scss
+++ b/frontend/src/app/core/components/admin/overview/overview.component.scss
@@ -278,21 +278,41 @@
               text-align: center;
               cursor: pointer;
               box-shadow: var(--shadow-level-0);
-              transition: transform 0.2s ease, box-shadow 0.2s ease;
+              position: relative;
+              overflow: hidden;
+              z-index: 1;
+              transition: transform 0.3s ease;
+
+              &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                @include mixins.gradient-primary;
+                opacity: 0;
+                transition: opacity 0.3s ease;
+                z-index: -1;
+              }
 
               span[mat-symbol] {
                 @include mixins.gradient-primary-text;
                 font-family: "Material Symbols Rounded";
                 font-size: var(--font-size-3xl);
+                position: relative;
               }
 
               .desc {
                 font-size: var(--font-size-sm);
+                position: relative;
               }
 
               /* Action Items Hover */
               &:hover {
-                @include mixins.gradient-primary;
+                &::before {
+                  opacity: 1;
+                }
 
                 span[mat-symbol] {
                   background: none;
@@ -304,9 +324,9 @@
                 }
               }
 
-              // &:active {
-              //   transform: scale(0.96);
-              // }
+              &:active {
+                transform: scale(0.98);
+              }
             }
           }
         }
