--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -35,6 +35,13 @@
   --line-height-mdx: 1.6;
   --line-height-lg: 1.75;
 
+  // Letter Spacing
+  --letter-spacing-xxs: 0.15px;
+  --letter-spacing-xs: 0.25px;
+  --letter-spacing-sm: 0.5px;
+  --letter-spacing-md: 1px;
+  --letter-spacing-lg: 1.5px;
+
   // Spacing
   --spacing-xxxs: 0.1rem;
   --spacing-xxs: 0.25rem;
@@ -238,6 +245,12 @@ span[mat-symbol] {
   .mat-mdc-dialog-container .mat-mdc-dialog-title + .mat-mdc-dialog-content {
     padding-bottom: var(--spacing-sm);
   }
+}
+
+.cdk-overlay-dark-backdrop {
+  backdrop-filter: blur(5px) brightness(0.5);
+  -webkit-backdrop-filter: blur(5px) brightness(0.5);
+  will-change: backdrop-filter;
 }
 
 // .mat-mdc-header-cell {
