feat: enhanced animations for a smoother user experience during the oauth login process

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -93,6 +93,7 @@
   --duration-extra-long: 0.7s;
 
   // Dialog Sizes
+  --dialog-xs: 15rem;
   --dialog-small: 20rem;
   --dialog-base: 25rem;
   --dialog-medium: 30rem;
