--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -33,7 +33,7 @@
   --primary-text-two: #f5cbcb;
   --primary-text-reverse: #f08383;
 
-  --error-base: #800000;
+  --primary-lighter: #800000;
 
   --secondary-text: #826202;
   --secondary-hover: #a47f1a0b;
@@ -117,7 +117,7 @@
   --primary-text-two: #3f0000;
   --primary-text-reverse: #800000;
 
-  --error-base: #b43a3a;
+  --primary-lighter: #be4a4a;
 
   --secondary-text: #cc9d1b;
   --secondary-hover: #cc9d1b08;
