--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -95,6 +95,7 @@
   // Dialog Sizes
   --dialog-xs: 15rem;
   --dialog-small: 20rem;
+  --dialog-smx: 21rem;
   --dialog-base: 25rem;
   --dialog-medium: 30rem;
   --dialog-base-height: 60vh;
