--- a/frontend/src/app/shared/dialog-faculty-login/dialog-faculty-login.component.scss
+++ b/frontend/src/app/shared/dialog-faculty-login/dialog-faculty-login.component.scss
@@ -11,7 +11,8 @@
     $justify: flex-start,
     $gap: var(--spacing-md)
   );
-  padding: var(--spacing-xl);
+  padding: var(--spacing-lgx);
+  max-width: var(--dialog-smx);
 }
 
 .dialog-login-title {
@@ -34,12 +35,28 @@
   }
 }
 
+.health-message-container {
+  @include mixins.flex-layout($justify: flex-start, $gap: var(--spacing-xs));
+  margin-bottom: var(--spacing-xs);
+  padding: var(--spacing-xs) var(--spacing-xs);
+  border-radius: var(--border-radius-sm);
+  background-color: var(--primary-fade);
+  font-size: var(--font-size-sm);
+  color: var(--primary-text);
+
+  .message-text {
+    margin: 0;
+  }
+}
+
 .dialog-login-content {
-  padding-top: var(--spacing-sm);
+  &.no-message {
+    padding-top: var(--spacing-sm);
+  }
 
   .field-container {
     position: relative;
-    margin-bottom: var(--spacing-xl);
+    margin-bottom: var(--spacing-lgx);
 
     &.has-error .input-container .login-input {
       border-color: var(--primary-one);
