--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <!-- <div class="feature-item">
+      <div class="feature-item extra">
         <div class="feature-icon-wrapper">
           <span mat-symbol="database"></span>
         </div>
@@ -77,7 +77,7 @@
             in one integrated system
           </p>
         </div>
-      </div> -->
+      </div>
     </div>
 
     <!-- Buttons Section -->
