enhance callback component visually and performance-wise

--- a/frontend/src/app/auth/callback/callback.component.html
+++ b/frontend/src/app/auth/callback/callback.component.html
@@ -4,5 +4,5 @@
     color="var(--primary-one)"
     type="cube-grid"
   ></app-custom-spinner>
-  <p class="callback-text">Finishing your login...</p>
+  <p class="callback-text">Almost there! Finishing your login</p>
 </div>
