--- a/frontend/src/app/auth/callback/callback.component.scss
+++ b/frontend/src/app/auth/callback/callback.component.scss
@@ -6,6 +6,28 @@
 }
 
 .callback-text {
-  font-weight: 500;
   color: var(--primary-one);
+
+  &:after {
+    content: "";
+    animation: ellipsis 2s infinite;
+  }
+}
+
+@keyframes ellipsis {
+  0% {
+    content: "";
+  }
+  16% {
+    content: ".";
+  }
+  50% {
+    content: "..";
+  }
+  83% {
+    content: "...";
+  }
+  100% {
+    content: "";
+  }
 }
