--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="app-root-body" 
-    [@fadeAnimation]="outlet.isActivated ? outlet.activatedRoute : ''">
-    <router-outlet #outlet="outlet"></router-outlet>
+<div class="app-container" [@routeAnimation]="getRouteState(outlet)">
+  <router-outlet #outlet="outlet"></router-outlet>
 </div>
