disable delete functionality and clean up code

--- a/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
+++ b/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
@@ -24,8 +24,8 @@
       [tableName]="'faculty'"
       [displayedColumns]="displayedColumns"
       [showViewButton]="false"
+      [showDeleteButton]="false"
       (edit)="openEditFacultyDialog($event)"
-      (delete)="deleteFaculty($event)"
     ></app-table-generic>
   </div>
 
