--- a/frontend/src/app/shared/table-generic/table-generic.component.html
+++ b/frontend/src/app/shared/table-generic/table-generic.component.html
@@ -91,10 +91,12 @@
           </button>
 
           <!-- Delete Button -->
+          @if (showDeleteButton) {
           <button mat-button class="delete-button" (click)="onDelete(element)">
             <mat-icon>delete</mat-icon>
             <span>Delete</span>
           </button>
+          }
         </div>
       </td>
     </ng-container>
