conditionally enable/disable faculty management

--- a/frontend/src/app/shared/table-generic/table-generic.component.html
+++ b/frontend/src/app/shared/table-generic/table-generic.component.html
@@ -85,6 +85,8 @@
             mat-button
             class="sec-ripple edit-button"
             (click)="onEdit(element)"
+            [disabled]="disableEdit"
+            [ngClass]="{ 'disabled-button': disableEdit }"
           >
             <mat-icon>edit</mat-icon>
             <span>Edit</span>
