--- a/frontend/src/app/shared/table-generic/table-generic.component.scss
+++ b/frontend/src/app/shared/table-generic/table-generic.component.scss
@@ -102,6 +102,10 @@
     .delete-button {
       color: var(--primary-text);
     }
+
+    .disabled-button {
+      opacity: var(--opacity-semi-opaque);
+    }
   }
 
   .custom-table-paginator {
