add buildings management functionality with API and UI integration

--- a/frontend/src/app/core/components/superadmin/main/main.component.html
+++ b/frontend/src/app/core/components/superadmin/main/main.component.html
@@ -80,17 +80,15 @@
           <span mat-symbol="school" matListItemIcon></span>
           <span matListItemTitle>Programs</span>
         </a>
-        <!--No longer displayed
         <a
           mat-list-item
           class="list-item"
-          routerLink="/superadmin/courses"
+          routerLink="/superadmin/buildings"
           routerLinkActive="active-link"
         >
-          <span mat-symbol="book" matListItemIcon></span>
-          <span matListItemTitle>Courses</span>
+          <span mat-symbol="apartment" matListItemIcon></span>
+          <span matListItemTitle>Buildings</span>
         </a>
-        -->
         <a
           mat-list-item
           class="list-item"
