--- a/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
@@ -7,9 +7,11 @@
   <!--Table Header-->
   <div class="rooms-header-container" [@fadeAnimation]>
     <app-table-header
+      title="Rooms"
       [inputFields]="headerInputFields"
       [addButtonLabel]="'Add Room'"
       (inputChange)="onInputChange($event)"
+      (search)="onSearch($event)"
       (add)="openAddRoomDialog()"
       (export)="onExport()"
     ></app-table-header>
@@ -19,13 +21,15 @@
   <div class="rooms-table-container" [@fadeAnimation]>
     @if (rooms$ | async; as rooms) {
     <app-table-generic
-      [columns]="columns"
-      [data]="rooms"
       [tableName]="'room/s'"
+      [data]="(rooms$ | async) || []"
+      [columns]="columns"
       [displayedColumns]="displayedColumns"
       (edit)="openEditRoomDialog($event)"
       (delete)="deleteRoom($event)"
-    ></app-table-generic>
+    >
+      ></app-table-generic
+    >
     }
   </div>
   }
