--- a/frontend/src/app/shared/table-dialog/table-dialog.component.html
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.html
@@ -67,7 +67,11 @@
               @for (option of field.options; track option) {
               <mat-option
                 [value]="isSelectOption(option) ? option.value : option"
+                [class.config-option]="isSelectOption(option) && option.metadata?.['isConfig']"
               >
+                @if (isSelectOption(option) && option.metadata?.['isConfig']) {
+                <mat-icon>settings</mat-icon>
+                }
                 {{ isSelectOption(option) ? option.label : option }}
               </mat-option>
               }
