enhance buildings and rooms management

--- a/frontend/src/app/core/components/superadmin/maintenance/buildings/buildings.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/buildings/buildings.component.html
@@ -12,6 +12,7 @@
       [addButtonLabel]="'Add Building'"
       (inputChange)="onInputChange($event)"
       (add)="openAddBuildingDialog()"
+      (export)="onExport()"
     ></app-table-header>
   </div>
 
