--- a/frontend/src/app/shared/table-dialog/table-dialog.component.scss
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.scss
@@ -103,3 +103,13 @@
     }
   }
 }
+
+.config-option {
+  mat-icon {
+    margin-right: 8px;
+    vertical-align: middle;
+    font-size: 18px;
+    height: 18px;
+    width: 18px;
+  }
+}
