add faculty badge in faculty component

--- a/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
+++ b/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
@@ -49,3 +49,13 @@
 
   }
 </div>
+
+<!-- Faculty Type Template -->
+<ng-template #facultyTypeTemplate let-element>
+  <div
+    class="faculty-type"
+    [ngClass]="getFacultyTypeClass(element.faculty_type)"
+  >
+    {{ element.faculty_type }}
+  </div>
+</ng-template>
