--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -58,8 +58,8 @@
   --aqua-fade-lighter: #b2e0ddb1;
   --aqua-text: #a1d8d6;
 
-  --green-primary: #005a09;
-  --green-fade: #00461933;
+  --green-primary: #004507;
+  --green-fade: #3cc16b52;
   --green-text: #c8f1cc;
 
   --pink-primary: #810040;
@@ -143,7 +143,7 @@
   --aqua-text: #003230;
 
   --green-primary: #97d39d;
-  --green-fade: #00461940;
+  --green-fade: #02732a49;
   --green-text: #003d06;
 
   --pink-primary: #ff89ad;
