--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.scss
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.scss
@@ -332,6 +332,12 @@
           background-color: var(--aqua-fade-lighter);
           color: var(--aqua-primary);
         }
+
+        /* Fallback theme for any new faculty type */
+        &:not(.full-time):not(.designee):not(.part-time):not(.temporary) {
+          background-color: var(--neutral-fade);
+          color: var(--neutral-base);
+        }
       }
 
       .faculty-name {
