--- a/frontend/src/app/shared/table-generic/table-generic.component.scss
+++ b/frontend/src/app/shared/table-generic/table-generic.component.scss
@@ -74,7 +74,7 @@
 
     .status-inactive {
       color: var(--primary-text-lighter);
-      background-color: var(--primary-fade);
+      background-color: var(--primary-one-fade);
     }
   }
 
