--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -138,7 +138,7 @@
         transition: background 0.3s ease;
 
         span[mat-symbol] {
-          font-size: var(--font-size-xl);
+          font-size: var(--font-size-xlx);
           width: auto;
           height: auto;
           color: var(--primary-text);
@@ -155,7 +155,6 @@
           font-weight: 500;
           color: var(--primary-text);
           margin: 0 0 var(--spacing-xxxs) 0;
-          letter-spacing: var(--letter-spacing-xxs);
         }
 
         p {
@@ -163,7 +162,6 @@
           color: var(--neutral-base);
           line-height: 1.5;
           margin: 0;
-          letter-spacing: var(--letter-spacing-xs);
         }
       }
     }
