--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -22,6 +22,7 @@
   --font-size-mdx: 1.1rem;
   --font-size-lg: 1.25rem;
   --font-size-xl: 1.5rem;
+  --font-size-xlx: 1.75rem;
   --font-size-2xl: 2rem;
   --font-size-2xxl: 2.5rem;
   --font-size-3xl: 3rem;
