--- a/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
+++ b/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
@@ -165,6 +165,7 @@
         <!-- Toggle Column -->
         <ng-container matColumnDef="toggle">
           <!-- Global Toggle -->
+          @if (allData.length) {
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             <div class="help-toggle-container">
               <!-- Check if scheduled and not enabled globally -->
@@ -198,6 +199,28 @@
               ></span>
             </div>
           </th>
+          } @else {
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            <div class="help-toggle-container">
+              <mat-slide-toggle
+                class="header-toggle"
+                [checked]="false"
+                [disabled]="true"
+                matTooltip="No faculty data available"
+              >
+              </mat-slide-toggle>
+              <span
+                mat-symbol="help"
+                [fill]="false"
+                class="help-button"
+                [matTooltip]="
+                  'This button allows you to toggle faculty preferences\n
+                   submission and set submission period'
+                "
+              ></span>
+            </div>
+          </th>
+          }
 
           <!-- Individual Toggle -->
           <td mat-cell *matCellDef="let element" class="custom-cell">
