rename notifications to faculty requests

--- a/frontend/src/app/core/components/admin/overview/overview.component.html
+++ b/frontend/src/app/core/components/admin/overview/overview.component.html
@@ -248,11 +248,11 @@
 
     <!--Cluster Two-->
     <div class="main-cluster-two">
-      <div class="notifications card">
+      <div class="requests card">
         <h2 class="card-title">
-          <span mat-symbol="notifications"></span>Notifications
+          <span mat-symbol="assignment"></span>Faculty Requests
         </h2>
-        <div class="notifications-content">
+        <div class="requests-content">
           <em>Feature coming soon.</em>
         </div>
       </div>
